<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- Application -->
    <string name="app_name">WASTL Mobile</string>
    <string name="app_version">1.3</string>
    <string name="logo">Image</string>
    <string name="about">About</string>
    <string name="lowerAustria">Niederösterreich</string>
    
    <!-- Main -->
    <string name="imageButton_Search">Search</string>
    
    <!-- Statistics -->
    <string name="statistics_title">Statistiken</string>
    <string name="statistics_LowerAustria">Statistiken über NÖ</string>
    <string name="statistics_Wastl">Statistiken über WASTL</string>
    
    <!-- Database -->
    <string name="create_Database">Datenbank wird erstellt</string>
    <string name="search_Database">Datenbank durchsuchen</string>
    
    <!-- Mission -->
    <string name="mission_Title">Aktuelle Einsätze</string>    
    
</resources>
