<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RLayout_Main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@drawable/background" >
    
    <RelativeLayout 
        android:id="@+id/RLayout_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >
        
        <ImageView
            android:id="@+id/image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/logo"
            android:padding="5dp"
            android:src="@drawable/logo_place" />
        
        <TextView style="@android:style/TextAppearance.DialogWindowTitle"
            android:id="@+id/textView_Title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/image_title"/>
        
        <ImageButton style="@style/titleBarAbout"
            android:src="@drawable/home"
            android:contentDescription="@string/about"            
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true" 
            android:layout_centerVertical="true"/>

        </RelativeLayout>
        
      
     <com.google.android.maps.MapView
	     android:layout_width="fill_parent"
	     android:layout_height="fill_parent"
	     android:clickable="true"
	     android:id="@+id/mapview"
	     android:apiKey="0FBAvY4pUcSZ8kcyrAXjHbedNQeTunktJs4rRUg"	     
	     android:layout_margin="10dp"
	     android:layout_below="@id/RLayout_Title"
     /> 

</RelativeLayout>