<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RLayout_Main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@drawable/background" >
    
    <RelativeLayout 
        android:id="@+id/RLayout_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >
        
        <ImageView
            android:id="@+id/image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/logo"
            android:padding="5dp"
            android:src="@drawable/logo_place" />
        
        <TextView style="@android:style/TextAppearance.DialogWindowTitle"
            android:id="@+id/textView_Title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/image_title"/>
        
        <ImageButton style="@style/titleBarAbout"
            android:src="@drawable/home"
            android:contentDescription="@string/about"            
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true" 
            android:layout_centerVertical="true"/>

        </RelativeLayout>
        
    <TextView style="@android:style/TextAppearance.Large"
    	android:textStyle="bold" 
    	android:layout_width="match_parent" 
    	android:gravity="center_vertical|center_horizontal" 
    	android:layout_height="58dp" 
    	android:textColor="#b22222"
    	android:id="@+id/textView_FireDepartment"
    	android:layout_below="@id/RLayout_Title" />
	
	    <TextView android:id="@+id/textView_Location"  
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textView_FireDepartment"
	        android:padding="15dp"
	    	android:textSize="18sp"
	        android:textColor="#000000" />
	    
	    <TextView  android:id="@+id/textView_MobilePhone"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textView_Location"
	        android:padding="15dp"
	    	android:textSize="18sp" 
	        android:textColor="#000000" />      

</RelativeLayout>